learning-ojs/3.2/es/authoring.md
---
book: learning-ojs
version: 3.2
---

# Autores

En este capítulo, aprenderá cómo trabaja un autor en OJS 3.2 desde el registro hasta la revisión de la galerada final.

## Registrándose en la revista

Para realizar un envío a una revista en OJS 3, primero tendrá que registrar una cuenta de usuario en una revista e iniciar sesión \(vea [Registrándose en una revista](./user-accounts#registering-with-a-journal)\). Tras esto, cuando inicie sesión, será llevado a su Panel de Control.

![Cola de envíos en el panel del autor](./assets/learning-ojs3.1-au-dashboard-empty.png)

Actualmente está vacío, ya que aún no ha realizado envíos.

<hr />

## Enviar un artículo

Comience un nuevo envío haciendo clic en el botón **Nuevo envío** al lado derecho de la pantalla. Se le llevará al paso 1 de un proceso de 5 pasos para subir y describir su envío.

![Cola de envío del autor con el nuevo botón de envío](./assets/learning-ojs3.1-au-dashboard-empty.png)

### Paso 1

En el **Paso 1** proporcionará información preliminar sobre su envío.

![Pantalla de inicio del artículo](./assets/learning-ojs3.2-au-dashboard-new-1.png)

Si la revista permite envíos en varios idiomas, puede seleccionar el idioma de su envío en el menú desplegable. Los idiomas pueden activarse en la configuración del sitio web -> Configuración -> Idioma.

Seleccione la sección apropiada para su envío \(artículo, revisión, etc.\). Si no está seguro de qué sección es la apropiada, haga la mejor conjetura posible.

Lea y acepte las declaraciones en la lista de verificación de envíos marcando cada casilla. Incluya cualquier comentario para el editor, lea la declaración de privacidad de la revista, y luego haga clic en el botón **Guardar y Continuar** para moverse al **Paso 2**.

### Paso 2

En el **Paso 2** se le abrirá una ventana que le permitirá subir su archivo.

![Pantalla de subida de archivos](./assets/learning-ojs-3-author-submission-step2.png)

Primero, DEBE seleccionar un componente de artículo. Esto permite que el sistema sepa si el archivo es el propio manuscrito, una imagen, un conjunto de datos, etc. **Esto debe ser seleccionado antes de que el archivo se suba**.

![Seleccionar componente del artículo](./assets/learning-ojs-3-author-submission-step2-2.png)

Una vez hecha esta selección, puede subir su primer archivo. Es importante tener en cuenta que solo puede subir **un único** archivo a la vez. Los archivos adicionales pueden ser subidos más tarde durante el proceso. Por lo general, este primer archivo será el cuerpo de su manuscrito. Haga clic en el botón **Continuar** una vez que el archivo suba.

![Revisar los detalles del envío](./assets/learning-ojs-3-author-submission-step2-3.png)

Después de subir el archivo, se le pedirá que revise el nombre del archivo. Utilice el enlace Editar para realizar cualquier cambio.

Haga clic en el botón **Continuar**.

A continuación, tiene la opción de repetir el proceso para subir archivos adicionales \(p. ej. un conjunto de datos o una imagen\).

Una vez que haya terminado de subir todos sus archivos, haga clic en **Completar**; esto cerrará la ventana de subida de archivos.

![Finalizar la pantalla de envío](./assets/learning-ojs-3-author-submission-step2-4.png)

Será redirigido a la pantalla _Enviar un artículo_, donde verá los archivos que ha subido. Si necesita realizar cambios, expanda la flecha azul a la izquierda de su archivo y haga cualquier cambio usando el enlace _Editar_.

Haga clic en 'Guardar y continuar' para ir al Paso 3.

### Paso 3

En el **Paso 3**se le pedirá que añada más información sobre el envío, incluyendo el título del envío (desglosado en prefijo, título y subtítulo) y el resumen. Si la revista permite envíos en varios idiomas, haciendo clic en los campos de metadatos revelará la opción de introducir los metadatos en otros idiomas previamente habilitados, permitiéndole introducir el título, subtítulo y resumen en el otro idioma(s).  Desplazándose hacia abajo...

![Introduzca los metadatos del título en otro idioma](./assets/learning-ojs3.2-au-dashboard-new-3.png)

...puede agregar cualquier colaborador adicional.

![Lista completa de colaboradores](./assets/learning-ojs3.1-au-dashboard-new-3-contrib.png)

Puede añadir más colaboradores \(p.ej. coautores\), haciendo clic en el enlace **Añadir colaboradores**. Esto abrirá una nueva ventana con campos para introducir sus datos.

![Añadir colaboradores](./assets/learning-ojs-3-author-submission-step3-2.png)

Presione **Guardar** y el nuevo colaborador aparecerá en la pantalla.

![Lista con nuevos colaboradores añadida](./assets/learning-ojs3.1-au-dashboard-new-3-contrib-new.png)

Si las categorías están habilitadas en la revista a la que está realizando un envío, podrá seleccionar una categoría para el manuscrito, si aplica.

![Seleccione una categoría](./assets/learning-ojs-authoring-category.png)

También puede ver campos adicionales para rellenar, tales como palabras clave. Si hay idiomas adicionales habilitados en la revista, puede introducir los metadatos en esos idiomas. Al hacer clic en el campo del metadato se mostrarán los campos para otros idiomas habilitados en la revista.

![Introduzca palabras clave](./assets/learning-ojs-3.2-author-submission-step3-4.png)

Para introducir una palabra clave, simplemente escriba la palabra o frase y pulse su tecla Intro. La palabra o frase será formateada como palabra clave.

Haga clic en **Guardar y continuar** para avanzar.

### Paso 4

En el paso 4, se le pedirá que confirme que está satisfecho con su envío.

Haga clic en **Finalizar envío**.

![Finalizar la pantalla de envío](./assets/learning-ojs3.1-au-dashboard-new-4.png)

Aparecerá una caja que te pedirá que confirmes que has finalizado. Haga clic en **OK**.

![Confirmar pantalla de envío](./assets/learning-ojs-3-author-submission-step4-1.png)

### Paso 5

![Pantalla de envío de siguientes pasos](./assets/learning-ojs3.1-au-dashboard-new-5.png)

¡Su envío ha sido completado! El editor ha sido notificado de su envío. En este punto, puedes seguir los enlaces para:

* Revisar este envío
* Crear un nuevo envío
* Regresar al panel de control

Una vez que complete un envío, no podrá realizar cambios en el mismo.  Si desea reemplazar el archivo que ha enviado o hacer otros cambios al envío, necesitará ponerse en contacto con el editor a través de la herramienta Discusiones.

### Panel de control

Y aquí está su envío en su Panel de Control. Puede ver que actualmente está en la etapa de _Envío_.

![Envío en el panel de autores](./assets/learning-ojs3.1-au-dashboard-new-sub.png)

En los próximos días, pasará a la fase de Revisión y, si se acepta, a las fases de Corrección y Producción antes de ser publicadas.

<hr />

## Editar Metadatos

En OJS 3.2, puede editar sus propios metadatos en diferentes etapas del flujo de trabajo editorial. Esto dependerá de la configuración concedida por la Revista. Es posible que tenga permisos globales para realizar ediciones o que tenga que enviar una solicitud al Editor para hacerlo.

Los cambios pueden incluir resúmenes actualizados, correcciones de errores ortográficos o adición de colaboradores adicionales.

Para realizar ediciones al manuscrito enviado, haga clic en la pestaña de publicación de su envío.

![Pestaña de publicación de envío](./assets/learning-ojs3.2-auth-dashboard-publication.png)

Podrá hacer cambios en cualquiera de los submenús de la izquierda haciendo clic en esas pestañas. Si hay varios idiomas habilitados en la revista, podrá editar metadatos en esos idiomas haciendo clic en la pestaña de idioma de la parte superior derecha. Haga clic en 'Guardar' una vez que haya terminado de hacer sus cambios.

![Elementos del menú de publicación](./assets/learning-ojs3.2-auth-dashboard-publication2-language.png)

Cuando se le conceda permiso, podrá hacer cambios en las siguientes secciones de la pestaña Publicación: Título, Resumen, Colaboradores y Metadatos. Mientras Galeradas aparezca como una opción en el menú lateral no podrá subir ni hacer cambios en esta sección.

Si nota que el botón 'Guardar' es gris y está inactivo, significa que tendrá que solicitar permiso al Editor para hacer cambios en su envío o pedirles que hagan los cambios por usted.

<hr />

## Respondiendo a una revisión

Una vez finalizado el proceso de revisión, el editor le notificará por correo electrónico su decisión.

Después de recibir el correo electrónico con la decisión, inicie sesión en su panel de control. Seleccione el manuscrito sobre el que ha sido notificado.

![Panel de control de envíos con elementos en revisión](./assets/learning-ojs-3.2-auth-responding-revisions.png)

Dentro de la pestaña Revisión del manuscrito, también verá una copia de la Decisión Editorial bajo Notificaciones. Dependiendo del tipo de revisión por pares que utilice el diario, podrá ver menos información en la pestaña Revisión de la revista. El ejemplo a continuación muestra una revisión por pares abierta que permite a los autores ver quién era el revisor.

![Pestaña de revisión del manuscrito](./assets/learning-ojs-3.2-auth-responding-revisions2.png)

Para ver la decisión Editorial, haga clic en el enlace debajo de las notificaciones.

![Notificación de decisión del editor](./assets/learning-ojs-3.2-auth-responding-revisions3.png)

Basándose en la información contenida en el mensaje del editor, usted debe ahora preparar sus revisiones.

### Subiendo el Archivo Revisado

Una vez que esté listo para cargar el archivo revisado, desplácese hacia abajo en la página y encuentre el panel de **Revisiones**.

![Panel de revisiones](./assets/learning-ojs-3-auth-responding-revisions4.png)

Utilice el enlace *Subir un archivo* para subir su manuscrito revisado.

![Subir archivo de revisión](./assets/learning-ojs-3-auth-responding-upload.png)

Utilice el menú desplegable para seleccionar que está subiendo una revisión de un archivo existente.

A continuación, suba el archivo revisado y pulse **Continuar**.

![Revisar detalles del archivo y continuar](./assets/learning-ojs-3-auth-responding-upload2.png)

Compruebe los detalles del archivo y presione **Continuar** de nuevo.

![Añadir otro archivo o completar la subida](./assets/learning-ojs-3-auth-responding-upload3.png)

Si tiene algún archivo adicional para subir, hágalo ahora. De lo contrario, pulse **Completar**.

Su archivo revisado ahora es visible en el panel Revisiones.

![Archivo revisado ahora en el panel de revisiones](./assets/learning-ojs-3-auth-responding-upload4.png)

### Informar al Editor

El editor recibirá una notificación sobre el(los) archivo(s) nuevo(s) que se están subiendo. Adicionalmente, puede informar al editor a través del panel de Discusión de Revisión como se explica a continuación.

![Panel de revisión de discusiones](./assets/learning-ojs-3-auth-responding-discussion.png)

Desde ahí, seleccione el enlace *Añadir Discusión*.

Seleccione los usuarios que desea notificar bajo Participantes.

![Añadir discusión y seleccionar participantes](./assets/learning-ojs-3.2-auth-responding-discussion-add.png)

Añada una línea de asunto y un mensaje.

Pulse **OK** para enviar el mensaje.

Un correo electrónico ha sido enviado al editor, y usted y el editor pueden ver el mensaje en el panel Discusiones de Revisión.

![Mensaje en el panel de discusión de revisiones](./assets/learning-ojs-3-auth-responding-discussion-panel.png)

En este punto, el autor tiene que esperar respuesta del editor sobre si las revisiones son aceptables o no.

### Revisiones Aceptadas

Recibirá un correo electrónico diciendo que sus revisiones han sido aceptadas.

Además, las notificaciones aparecerán en su panel de control.

![Notificaciones en el panel de control](./assets/learning-ojs-3.2-au-notifications.png)

Las notificaciones se muestran en orden de fecha, lo que significa que la más reciente estará en la parte inferior. Haga clic para abrir el mensaje (que es el mismo que el correo electrónico que también habrá recibido).

![Mensaje de Notificación](./assets/learning-ojs-3-au-notifications2.png)

Use la **X** en la esquina superior derecha para cerrar la ventana.

Bajo su panel de control, también verá la respuesta del editor.

![Respuesta a la discusión en el panel de discusión de revisión](./assets/learning-ojs-3-au-rev-discussions.png)

Al hacer clic en el título de la discusión ésta se abrirá.

![Mensaje de revisión de discusión](./assets/learning-ojs-3-au-rev-discussions2.png)

¡Felicidades! Su envío ha sido aceptado y su archivo está pasando a la fase Corrección.

<hr />

## Volver a enviar a revisión

Si la decisión del editor es volver a enviar a revisión, tendrá que iniciar sesión y seleccionar el artículo en su página de envíos. El nuevo envío se realiza en la fase de revisión, no hay necesidad de iniciar un nuevo envío.

En la fase de revisión tendrá que hacer dos cosas para reenviar su documento una vez lo haya revisado:

Suba el nuevo archivo en la sección de revisiones. Para subir un nuevo archivo, haga clic en 'Subir archivo'. Se abrirá una nueva ventana que le permitirá cargar su(s) archivo(s). Seleccione la opción apropiada en el menú desplegable para indicar que está enviando una revisión de un archivo existente.

Añada un comentario para notificar al editor que ha vuelto a enviar un archivo.

El proceso de revisión por pares se repetirá, y posiblemente recibirá nuevas revisiones para realizar correcciones. Una vez que estos hayan sido completados y aceptados, se continuará con la siguiente etapa.

<hr />

## Respuesta a una solicitud de Corrección

El siguiente paso en el flujo de trabajo es inspeccionar sus archivos de envío que ya han sido corregidos.

Recibirá un correo electrónico indicando que los archivos están disponibles. Para verlos, inicia sesión en la revista y vaya a su panel de control.

![Panel de control de envíos del autor](./assets/learning-ojs-3-au-copyedits.png)

Puede ver su envío en el panel Mis archivos. Seleccione el enlace Corregir para ir al registro completo de envíos, incluyendo la notificación en el panel de discusión de Corrección.

![Sección de corrección del panel de control del autor](./assets/learning-ojs-3-au-copyedits-notice.png)

Haga clic en la discusión para abrirla, leer el mensaje y abrir el archivo adjunto.

![Mensaje de discusión sobre la revisión de la corrección](./assets/learning-ojs-3-au-copyedits-message.png)

Una vez que haya leído el archivo adjunto, puede responder al Corrector indicando los cambios necesarios o su aprobación.

![Respuesta al mensaje de revisión de corrección](./assets/learning-ojs-3-au-copyedits-reply.png)

Si es necesario, puede adjuntar una revisión, pero para este ejemplo simplemente aprobaremos los cambios y pulsaremos **OK**.

En su panel de control, puede ver que usted fue la última persona en responder al mensaje.

![Panel de control con discusiones sobre correcciones](./assets/learning-ojs-3-au-copyedits-final-dash.png)

Su papel en el proceso de Corrección ya está completo y puede esperar a la solicitud de revisión de las galeradas finales (PDFs, HTML, etc.) antes de la publicación.

<hr />

## Respuesta a una solicitud de Maquetación

El siguiente paso en el flujo de trabajo es revisar sus archivos de envío que se han convertido en galeradas (por ejemplo, PDF, HTML, etc.).

Recibirá un correo electrónico indicando que los archivos están disponibles. Para verlos, inicie sesión en la revista y vaya a su panel de control.

![Panel de control de envíos del autor](./assets/learning-ojs-3-au-production-dashboard.png)

Puede ver su envío en el panel Mis archivos. Seleccione el enlace para ir al registro completo de envíos, incluyendo la notificación en el panel de discusión.

![Sección de producción del panel de control del autor](./assets/learning-ojs-3-au-production-record.png)

Haga clic en la discusión relacionada para abrirla, leer el mensaje y abrir el archivo adjunto.

![Mensaje de galerada lista para revisión de maquetación](./assets/learning-ojs-3-au-production-message.png)

Una vez que haya leído el archivo adjunto, puede responder al Maquetador indicando los cambios necesarios o su aprobación.

![Mensaje de respuesta a Galerada lista para revisión de maquetación](./assets/learning-ojs-3-au-production-message2.png)

¡Eso es todo! Su papel en el flujo de trabajo editorial se ha completado.
